--- a/build.gradle
+++ b/build.gradle
@@ -128,6 +128,9 @@ dependencies {
     //Extra Utilities
     compileOnly("curse.maven:extrautilities:2678374")
 
+    //Bewitchment
+    compileOnly("curse.maven:bewitchment:3044569")
+
     //Mixins
     embed('org.spongepowered:mixin:0.8-SNAPSHOT') {
         transitive = false
