Add fix for off-hand Magic Mirror dupe

--- a/src/main/resources/mixins/mixins.dupefixproject.thaumcraft.json
+++ b/src/main/resources/mixins/mixins.dupefixproject.thaumcraft.json
@@ -6,6 +6,7 @@
   "minVersion": "0.8",
   "compatibilityLevel": "JAVA_8",
   "mixins": [
+    "ContainerHandMirrorMixin",
     "ContainerRepairMixin"
   ]
 }
