Just some Shadow and Formatting

--- a/build.gradle
+++ b/build.gradle
@@ -83,7 +83,7 @@ repositories {
 
 dependencies {
 	//Arcane Archives
-    compileOnly("curse.maven:arcane-archives-311357:3057332")
+    compileOnly("curse.maven:arcanearchives-311357:3057332")
 	
     //Tiny Progressions
     compileOnly("curse.maven:tinyprogressions-250850:2721018")
