Forgotten mixin arcanearchives

--- a/src/main/resources/mixins/mixins.dupefixproject.arcanearchives.json
+++ b/src/main/resources/mixins/mixins.dupefixproject.arcanearchives.json
@@ -7,7 +7,8 @@
   "compatibilityLevel": "JAVA_8",
   "mixins": [
     "ContainerRadiantCraftingTableMixin",
-	"ContainerGemCuttersTableMixin",
-	"ContainerUpgradesMixin"
+    "ContainerGemCuttersTableMixin",
+    "ContainerUpgradesMixin",
+    "ContainerRadiantChestMixin"
   ]
 }
