--- a/src/main/resources/mixins/mixins.dupefixproject.thermalexpansion.json
+++ b/src/main/resources/mixins/mixins.dupefixproject.thermalexpansion.json
@@ -6,6 +6,7 @@
   "minVersion": "0.8",
   "compatibilityLevel": "JAVA_8",
   "mixins": [
-    "ContainerSatchelFilterMixin"
+    "ContainerSatchelFilterMixin",
+    "BlockCacheMixin"
   ]
 }
