Mixin annotation processor

--- a/build.gradle
+++ b/build.gradle
@@ -139,6 +139,7 @@ dependencies {
     embed('org.spongepowered:mixin:0.8.3-SNAPSHOT') {
         transitive = false
     }
+    annotationProcessor 'org.spongepowered:mixin:0.8.3-SNAPSHOT:processor'
 }
 
 jar {
