Thaumcraft Entities Drops Dupe Fix #95

--- a/src/main/resources/mixins/mixins.dupefixproject.thaumcraft.json
+++ b/src/main/resources/mixins/mixins.dupefixproject.thaumcraft.json
@@ -7,6 +7,10 @@
   "compatibilityLevel": "JAVA_8",
   "mixins": [
     "ContainerHandMirrorMixin",
-    "ContainerRepairMixin"
+    "ContainerRepairMixin",
+    "EntityArcaneBoreMixin",
+    "EntityThaumcraftGolemMixin",
+    "EntityTurretCrossbowAdvancedMixin",
+    "EntityTurretCrossbowMixin"
   ]
 }
